--- a/Week 4/week 4.html
+++ b/Week 4/week 4.html
@@ -3,6 +3,7 @@
      <title>HW 2</title>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
      <script src="hw4.js"></script>
+     <script src="imageclass.js"></script>
     </head>
     <body>
     <button>back</button>
