--- a/Week 7 /week 7.html
+++ b/Week 7 /week 7.html
@@ -4,6 +4,7 @@
      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
      <script src="hw7.js"></script>
      <script src="p5play.js"></script>
+     <script src="particleclass.js"></script>
 
     </head>
     </html>
